# DeepLearningIndependentStudy

./: ApplicationsOfDeepLearningProblemSet.ipynb  AttentionBlocks.ipynb  Chapter7_Regularization_FullLab_Student.ipynb  Chapter9ProblemSet_RylanBerry.ipynb  MNIST_Model_2_0_(Indp_Study_Final).ipynb  OptimizationLab.ipynb  PracticalMethodologyProblemSet.ipynb  PreFinalDeepLearningProj_Model_Saving.ipynb  README.md  RNNDeeplearningProblemSet.ipynb  RegularizationLab.ipynb  RylanBerryCh8ProblemSet.ipynb  base_model_parameters.json  cnn0_model_params.json  cnn1_model_params.json  feedforwardnetwork_lab.ipynb
deeplearning_package/: LICENSE  README.md  pyproject.toml
deeplearning_package/src/: README.md  pyproject.toml
deeplearning_package/src/rb_deeplearning_lib/: __init__.py  attention.py  autogradient.py  cnn_layers.py  neural_net.py  optimizer.py  rnn_layers.py  save_load_funcs.py  sequence.py
deeplearning_package/src/rb_deeplearning_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
